--- a/my-portfolio/src/pages/hero/hero.scss
+++ b/my-portfolio/src/pages/hero/hero.scss
@@ -4,6 +4,48 @@
     background: linear-gradient(180deg, #0c0c1d, #111132);
     position: relative;
 
+    .wrapper {
+        max-width: 1200px;
+        height: 100%;
+        margin: auto;
+
+        .textContainer {
+            width: 50%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 40px;
+
+            h2 {
+                font-size: 30px;
+                color: rebeccapurple;
+                letter-spacing: 10px;
+            }
+
+            h1 {
+                font-size: 88px;
+            }
+
+            .buttons {
+                button {
+                    padding: 20px;
+                    border: 1px solid white;
+                    border-radius: 10px;
+                    background-color: transparent;
+                    color: white;
+                    margin-right: 20px;
+                    cursor: pointer;
+                    font-weight: 300;
+                }
+            }
+
+            img {
+                width: 50px;
+            }
+        }
+    }
+
     .imageContainer {
         height: 100%;
         position: absolute;
@@ -14,5 +56,13 @@
             filter: drop-shadow(4px 0px 3px rgb(37, 42, 65));
         }
 
+    }
+
+    .slidingTextContainer{
+        position: absolute;
+        font-size: 50vh;
+        bottom: -100px;
+        white-space: nowrap;
+        color: #ffffff09;
     }
 }
