--- a/my-portfolio/src/pages/hero/hero.scss
+++ b/my-portfolio/src/pages/hero/hero.scss
@@ -64,5 +64,7 @@
         bottom: -100px;
         white-space: nowrap;
         color: #ffffff09;
+        width: 50%;
+        font-weight: bold;
     }
 }
