--- a/my-portfolio/src/components/sidebar/sidebar.scss
+++ b/my-portfolio/src/components/sidebar/sidebar.scss
@@ -9,6 +9,7 @@
     color: #090916;
 
     .bg {
+        z-index:999;
         position: fixed;
         top:0;
         bottom:0;
@@ -33,6 +34,7 @@
     }
 
     button {
+        z-index:999;
         position: fixed;
         width: 50px;
         height: 50px;
