--- a/my-portfolio/src/pages/parallax/parallax.scss
+++ b/my-portfolio/src/pages/parallax/parallax.scss
@@ -1,11 +1,11 @@
 @mixin imageStyles($imgUrl) {
     background-image: url($imgUrl);
-        background-size: cover;
-        background-position: bottom;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-  }
+    background-size: cover;
+    background-position: bottom;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
 
 .parallax {
     height: 100%;
@@ -14,6 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 
     h1 {
         font-size: 100px;
