--- a/my-portfolio/src/pages/education/education.scss
+++ b/my-portfolio/src/pages/education/education.scss
@@ -33,7 +33,7 @@
 
             .content {
                 padding: 20px 30px;
-                background-color: rgb(106, 103, 147);
+                background-color: rgba(68, 63, 144, 0.441);
                 position: relative;
                 border-radius: 6px;
 
@@ -48,8 +48,8 @@
                 position: absolute;
                 width: 25px;
                 height: 25px;
-                background-color: white;
-                border: 4px solid #FF9F55;
+                background-color:  rgb(41, 38, 82);
+                border: 4px solid #f9710a;
                 border-radius: 50%;
                 z-index: 1;
                 transform: rotate(-90deg);
