portfolio on progress

--- a/my-portfolio/src/pages/education/education.scss
+++ b/my-portfolio/src/pages/education/education.scss
@@ -5,6 +5,7 @@
     align-items: center;
     height: 100vh;
     width: 100%;
+    overflow: hidden;
 
     .timeline {
         position: relative;
@@ -37,6 +38,10 @@
                 position: relative;
                 border-radius: 6px;
 
+                h2 {
+                    color: #f9710a;
+                }
+
                 h5 {
                     margin-block: 10px;
                     font-weight: lighter;
@@ -48,7 +53,7 @@
                 position: absolute;
                 width: 25px;
                 height: 25px;
-                background-color:  rgb(41, 38, 82);
+                background-color: rgb(41, 38, 82);
                 border: 4px solid #f9710a;
                 border-radius: 50%;
                 z-index: 1;
@@ -58,7 +63,7 @@
                     stroke-dashoffset: 0;
                     stroke-width: 15%;
                     fill: none;
-                  }
+                }
             }
         }
 
