--- a/my-portfolio/src/pages/portfolio/portfolio.scss
+++ b/my-portfolio/src/pages/portfolio/portfolio.scss
@@ -1,1 +1,84 @@
-.portfolio {}
+.portfolio {
+    position: relative;
+
+    .progress {
+        position: sticky;
+        top: 0;
+        left: 0;
+        padding-top: 50px;
+        text-align: center;
+        color: orange;
+        font-size: 36px;
+
+        .progressBar {
+            height: 10px;
+            background-color: white;
+        }
+    }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+        .wrapper {
+            max-width: 1200px;
+            height: 100%;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 50px;
+            margin-top: 30px;
+
+            .imageContainer {
+                flex: 1;
+                height: 50%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+
+            .textContainer {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+
+                h2 {
+                    font-size: 40px;
+                }
+
+                p {
+                    color: gray;
+                    font-size: 16px;
+                }
+
+                .links {
+                    display: flex;
+                    gap: 30px;
+                    align-items: center;
+
+                    a {
+                        list-style: none;
+                        cursor: pointer;
+
+                        img {
+                            width: 30px;
+                            height: 30px;
+                            color: orange;
+                        }
+                    }
+
+                }
+            }
+        }
+    }
+}
