--- a/my-portfolio/src/components/navbar/navbar.scss
+++ b/my-portfolio/src/components/navbar/navbar.scss
@@ -4,7 +4,7 @@
     height: 100px;
 
     .wrapper {
-        max-width: 1200px;
+        max-width: $desktop-width;
         margin: auto;
         display: flex;
         align-items: center;
@@ -18,6 +18,7 @@
 
         span {
             font-weight: bold;
+            margin-left: 50px;
 
             @include mobile {
                 display: none;
