--- a/my-portfolio/src/pages/contact/contact.scss
+++ b/my-portfolio/src/pages/contact/contact.scss
@@ -1,6 +1,8 @@
+@import '../../app.scss';
+
 .contact {
     height: 100%;
-    max-width: 1200px;
+    max-width: $desktop-width;
     margin: auto;
     display: flex;
     align-items: center;
