--- a/my-portfolio/src/pages/education/education.scss
+++ b/my-portfolio/src/pages/education/education.scss
@@ -1,4 +1,5 @@
-/* The actual timeline (the vertical ruler) */
+@import '../../app.scss';
+
 .timelineContainer {
     display: flex;
     justify-content: center;
@@ -9,7 +10,7 @@
 
     .timeline {
         position: relative;
-        max-width: 1200px;
+        max-width: $desktop-width;
         height: 550px;
         width: 100%;
         margin: 0 auto;
