--- a/my-portfolio/src/pages/hero/hero.scss
+++ b/my-portfolio/src/pages/hero/hero.scss
@@ -1,3 +1,5 @@
+@import '../../app.scss';
+
 .hero {
     height: calc(100vh - 100px);
     overflow: hidden;
@@ -5,7 +7,7 @@
     position: relative;
 
     .wrapper {
-        max-width: 1200px;
+        max-width: $desktop-width;
         height: 100%;
         margin: auto;
 
@@ -17,14 +19,31 @@
             justify-content: center;
             gap: 40px;
 
+            @include mobile {
+                height: 60%;
+                width: 100%;
+                gap: 20px;
+                align-items: center;
+                text-align: center;
+                padding-inline: 10px;
+            }
+
             h2 {
                 font-size: 30px;
                 color: rebeccapurple;
                 letter-spacing: 10px;
+
+                @include mobile {
+                    font-size: 15px;
+                }
             }
 
             h1 {
                 font-size: 88px;
+
+                @include mobile {
+                    font-size: 36px;
+                }
             }
 
             .buttons {
@@ -37,11 +56,20 @@
                     margin-right: 20px;
                     cursor: pointer;
                     font-weight: 300;
+
+                    @include mobile {
+                        padding: 10px;
+                        margin-bottom: 5px;
+                    }
                 }
             }
 
             img {
                 width: 50px;
+
+                @include mobile {
+                    width: 25px;
+                }
             }
         }
     }
@@ -50,12 +78,24 @@
         height: 100%;
         position: absolute;
         top: 0;
-        right: 0px;
+        right: 0;
+
+        @include mobile {
+            height: 50%;
+            width: 100%;
+            top: unset;
+            bottom: 0px;
+        }
 
         img {
             object-fit: contain;
             width: 900px;
             filter: drop-shadow(4px 0px 3px rgb(37, 42, 65));
+
+            @include mobile {
+                width: 100%;
+                height: 100%;
+            }
         }
 
     }
