--- a/my-portfolio/src/pages/portfolio/portfolio.scss
+++ b/my-portfolio/src/pages/portfolio/portfolio.scss
@@ -1,3 +1,5 @@
+@import '../../app.scss';
+
 .portfolio {
     position: relative;
 
@@ -25,7 +27,7 @@
         overflow: hidden;
 
         .wrapper {
-            max-width: 1200px;
+            max-width: $desktop-width;
             height: 100%;
             margin: auto;
             display: flex;
