--- a/my-portfolio/src/pages/education/education.scss
+++ b/my-portfolio/src/pages/education/education.scss
@@ -11,20 +11,32 @@
     .timeline {
         position: relative;
         max-width: $desktop-width;
-        height: 550px;
         width: 100%;
         margin: 0 auto;
+
+        @include mobile {
+            margin-top: 70px;
+        }
 
         &:after {
             content: '';
             position: absolute;
             width: 6px;
+            // height: 380px;
             border-radius: 10px;
             background-color: white;
             top: 0;
             bottom: 0;
             left: 50%;
             margin-left: -3px;
+
+            @include mobile {
+                width: 4px;
+                // top: 25%;
+                bottom: -30%;
+                left: 31px;
+                height: 100vh;
+            }
         }
 
         .container {
@@ -32,6 +44,12 @@
             position: relative;
             background-color: inherit;
             width: 50%;
+
+            @include mobile {
+                width: 100%;
+                padding-left: 70px;
+                padding-right: 25px;
+            }
 
             .content {
                 padding: 20px 30px;
@@ -69,7 +87,7 @@
         }
 
         .left {
-            left: 0%;
+            left: 0;
             margin-top: 120px;
 
             &:before {
@@ -83,16 +101,34 @@
                 border: medium solid white;
                 border-width: 10px 0 10px 10px;
                 border-color: transparent transparent transparent white;
+
+                @include mobile {
+                    left: 60px;
+                    rotate: 180deg;
+                }
+
             }
 
             svg {
                 right: -52px;
                 top: 15px;
+
+                @include mobile {
+                    right: unset;
+                    left: -53px;
+                    top: 10px;
+                }
             }
         }
 
         .right {
             left: 50%;
+            top: 10%;
+
+            @include mobile {
+                left: unset;
+                top: unset;
+            }
 
             &:before {
                 content: " ";
@@ -105,46 +141,27 @@
                 border: medium solid white;
                 border-width: 10px 10px 10px 0;
                 border-color: transparent white transparent transparent;
+
+                @include mobile {
+                    rotate: 360deg;
+                    left: 61px;
+                }
+
             }
 
             &:after {
                 left: -16px;
+
+                @include mobile {
+                    left: 15px;
+                }
             }
 
             svg {
                 left: -53px;
                 top: 15px;
             }
-        }
-    }
-}
 
-
-@media screen and (max-width: 600px) {
-
-    .timeline::after {
-        left: 31px;
-
-        .container {
-            width: 100%;
-            padding-left: 70px;
-            padding-right: 25px;
-
-            &:before {
-                left: 60px;
-                border: medium solid white;
-                border-width: 10px 10px 10px 0;
-                border-color: transparent white transparent transparent;
-            }
-        }
-
-        .left::after,
-        .right::after {
-            left: 15px;
-        }
-
-        .right {
-            left: 0%;
         }
     }
 }
