--- a/my-portfolio/src/pages/contact/contact.scss
+++ b/my-portfolio/src/pages/contact/contact.scss
@@ -8,15 +8,33 @@
     align-items: center;
     gap: 50px;
 
+    @include mobile {
+        width: 100%;
+        padding: 10px;
+        flex-direction: column;
+    }
+
     .textContainer {
         flex: 1;
         display: flex;
         flex-direction: column;
         gap: 30px;
 
+        @include mobile {
+            gap: 20px;
+            text-align: center;
+            align-items: center;
+            margin-top: 70px;
+        }
+
         h1 {
             font-size: 80px;
             line-height: 88px;
+
+            @include mobile {
+                font-size: 36px;
+                line-height: 45px;
+            }
         }
 
         span {
@@ -29,6 +47,11 @@
         flex: 1;
         position: relative;
 
+        @include mobile {
+            width: 100%;
+            padding: 30px;
+        }
+
         .phoneSvg {
             stroke: orange;
             position: absolute;
@@ -39,6 +62,12 @@
             svg {
                 object-fit: contain;
                 width: 350px;
+
+                @include mobile {
+                    margin: 0;
+                    top:0;
+                    width: 300px;
+                }
             }
         }
 
@@ -54,6 +83,10 @@
                 border: 1px solid white;
                 color: white;
                 border-radius: 5px;
+
+                @include mobile {
+                    padding: 10px;
+                }
             }
 
             button {
@@ -64,6 +97,10 @@
                 cursor: pointer;
                 font-weight: 500;
                 color: white;
+
+                @include mobile {
+                    padding: 10px;
+                }
             }
 
         }
