--- a/my-portfolio/src/pages/portfolio/portfolio.scss
+++ b/my-portfolio/src/pages/portfolio/portfolio.scss
@@ -12,6 +12,11 @@
         color: orange;
         font-size: 36px;
 
+        @include mobile {
+            padding-top: calc(100vh - 100px);
+            font-size: 24px;
+        }
+
         .progressBar {
             height: 10px;
             background-color: white;
@@ -34,16 +39,34 @@
             align-items: center;
             justify-content: center;
             gap: 50px;
-            margin-top: 30px;
+            // margin-top: 30px;
+
+            @include mobile {
+                flex-direction: column;
+                gap: 10px;
+                padding: 8px;
+                margin: 0;
+            }
 
             .imageContainer {
-                flex: 1;
+                flex: 2;
                 height: 50%;
+                background-color: rgba(211, 211, 211, 0.351);
+                border-radius: 20px;
+
+                @include mobile {
+                    width: 100%;
+                    max-height: 300px;
+                }
 
                 img {
                     width: 100%;
                     height: 100%;
-                    object-fit: contain;
+                    object-fit: cover;
+
+                    @include mobile {
+                        object-fit: contain;
+                    }
                 }
             }
 
@@ -54,13 +77,30 @@
                 flex-direction: column;
                 gap: 30px;
 
+                @include mobile {
+                    transform: none !important;
+                    padding: 10px;
+                    gap: 10px;
+                    // align-items: center;
+                    text-align: center;
+                }
+
                 h2 {
                     font-size: 40px;
+
+                    @include mobile {
+                        font-size: 24px;
+                    }
                 }
 
                 p {
                     color: gray;
                     font-size: 16px;
+
+                    @include mobile {
+                        font-size: 12px;
+                        text-align: justify;
+                    }
                 }
 
                 .links {
@@ -76,6 +116,11 @@
                             width: 30px;
                             height: 30px;
                             color: orange;
+
+                            @include mobile {
+                                width: 24px;
+                                height: 24px;
+                            }
                         }
                     }
 
