--- a/my-portfolio/src/pages/portfolio/portfolio.scss
+++ b/my-portfolio/src/pages/portfolio/portfolio.scss
@@ -17,6 +17,11 @@
             font-size: 24px;
         }
 
+        @include tablet {
+            padding-top: calc(100vh - 200px);
+            font-size: 36px;
+        }
+
         .progressBar {
             height: 10px;
             background-color: white;
@@ -48,6 +53,11 @@
                 margin: 0;
             }
 
+            @include tablet {
+                flex-direction: column;
+                padding: 8px;
+            }
+
             .imageContainer {
                 flex: 2;
                 height: 50%;
@@ -59,12 +69,21 @@
                     max-height: 300px;
                 }
 
+                @include tablet {
+                    width: 100%;
+                    max-height: 600px;
+                }
+
                 img {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
 
                     @include mobile {
+                        object-fit: contain;
+                    }
+
+                    @include tablet {
                         object-fit: contain;
                     }
                 }
@@ -81,8 +100,15 @@
                     transform: none !important;
                     padding: 10px;
                     gap: 10px;
-                    // align-items: center;
+                    align-items: center;
                     text-align: center;
+                }
+
+                @include tablet {
+                    transform: none !important;
+                    gap: 30px;
+                    text-align: center;
+                    align-items: center;
                 }
 
                 h2 {
