tablet - contact complete

--- a/my-portfolio/src/pages/contact/contact.scss
+++ b/my-portfolio/src/pages/contact/contact.scss
@@ -14,6 +14,12 @@
         flex-direction: column;
     }
 
+    @include tablet {
+        width: 100%;
+        padding: 20px;
+        flex-direction: column;
+    }
+
     .textContainer {
         flex: 1;
         display: flex;
@@ -25,6 +31,13 @@
             text-align: center;
             align-items: center;
             margin-top: 70px;
+        }
+
+        @include tablet {
+            gap: 40px;
+            text-align: center;
+            justify-content: center;
+            margin-top: 90px;
         }
 
         h1 {
@@ -52,6 +65,11 @@
             padding: 30px;
         }
 
+        @include tablet {
+            width: 100%;
+            padding: 40px;
+        }
+
         .phoneSvg {
             stroke: orange;
             position: absolute;
@@ -67,6 +85,10 @@
                     margin: 0;
                     top:0;
                     width: 300px;
+                }
+
+                @include tablet {
+                    width: 650px;
                 }
             }
         }
