--- a/my-portfolio/src/app.scss
+++ b/my-portfolio/src/app.scss
@@ -37,7 +37,7 @@ section{
 }
 
 @mixin tablet {
-    @media(max-width: 1024px){
+    @media(min-width:739px) and (max-width: 1024px){
         @content;
     }
 }
