--- a/my-portfolio/src/pages/portfolio/portfolio.scss
+++ b/my-portfolio/src/pages/portfolio/portfolio.scss
@@ -19,12 +19,12 @@
 
         @include mobile {
             padding-top: calc(100vh - 100px);
-            font-size: 24px;
+            font-size: 18px;
         }
 
         @include tablet {
             padding-top: calc(100vh - 100px);
-            font-size: 36px;
+            font-size: 24px;
         }
 
         .progressBar {
@@ -56,11 +56,14 @@
                 gap: 10px;
                 padding: 8px;
                 margin: 0;
+                align-items: center;
+                justify-content: flex-start;
             }
 
             @include tablet {
                 flex-direction: column;
                 padding: 8px;
+                gap: 10px;
             }
 
             .imageContainer {
