--- a/my-portfolio/src/pages/portfolio/portfolio.scss
+++ b/my-portfolio/src/pages/portfolio/portfolio.scss
@@ -101,6 +101,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 30px;
+                z-index:1;
 
                 @include mobile {
                     transform: none !important;
