--- a/my-portfolio/src/components/sidebar/sidebar.scss
+++ b/my-portfolio/src/components/sidebar/sidebar.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: #090916;
 
     .bg {
@@ -15,7 +15,7 @@
         bottom:0;
         left:0;
         width: 400px;
-        background-color: white;
+        background-color: rgb(255, 255, 255);
 
         @include mobile{
             width: 50%;
