--- a/my-portfolio/src/pages/contact/contact.scss
+++ b/my-portfolio/src/pages/contact/contact.scss
@@ -102,8 +102,8 @@
             textarea {
                 padding: 20px;
                 background-color: transparent;
-                border: 1px solid white;
-                color: white;
+                border: 1px solid rgb(255, 255, 255);
+                color: rgb(255, 255, 255);
                 border-radius: 5px;
 
                 @include mobile {
@@ -118,7 +118,7 @@
                 background-color: orange;
                 cursor: pointer;
                 font-weight: 500;
-                color: white;
+                color: rgb(255, 255, 255);
 
                 @include mobile {
                     padding: 10px;
