--- a/my-portfolio/src/pages/education/education.scss
+++ b/my-portfolio/src/pages/education/education.scss
@@ -1,167 +1,173 @@
 @import '../../app.scss';
 
-.timelineContainer {
+.education {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
 
-    .timeline {
-        position: relative;
-        max-width: $desktop-width;
+    .timelineContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
         width: 100%;
-        margin: 0 auto;
+        overflow: hidden;
 
-        @include mobile {
-            margin-top: 70px;
-        }
-
-        &:after {
-            content: '';
-            position: absolute;
-            width: 6px;
-            // height: 380px;
-            border-radius: 10px;
-            background-color: white;
-            top: 0;
-            bottom: 0;
-            left: 50%;
-            margin-left: -3px;
-
-            @include mobile {
-                width: 4px;
-                // top: 25%;
-                bottom: -30%;
-                left: 31px;
-                height: 100vh;
-            }
-        }
-
-        .container {
-            padding: 10px 40px;
+        .timeline {
             position: relative;
-            background-color: inherit;
-            width: 50%;
+            max-width: $desktop-width;
+            width: 100%;
+            margin: 0 auto;
 
             @include mobile {
-                width: 100%;
-                padding-left: 70px;
-                padding-right: 25px;
-            }
-
-            .content {
-                padding: 20px 30px;
-                background-color: rgba(68, 63, 144, 0.441);
-                position: relative;
-                border-radius: 6px;
-
-                h2 {
-                    color: #f9710a;
-                }
-
-                h5 {
-                    margin-block: 10px;
-                    font-weight: lighter;
-                }
-            }
-
-            svg {
-                content: '';
-                position: absolute;
-                width: 25px;
-                height: 25px;
-                background-color: rgb(41, 38, 82);
-                border: 4px solid #f9710a;
-                border-radius: 50%;
-                z-index: 1;
-                transform: rotate(-90deg);
-
-                circle {
-                    stroke-dashoffset: 0;
-                    stroke-width: 15%;
-                    fill: none;
-                }
-            }
-        }
-
-        .left {
-            left: 0;
-            margin-top: 120px;
-
-            &:before {
-                content: " ";
-                height: 0;
-                position: absolute;
-                top: 22px;
-                width: 0;
-                z-index: 1;
-                right: 30px;
-                border: medium solid white;
-                border-width: 10px 0 10px 10px;
-                border-color: transparent transparent transparent white;
-
-                @include mobile {
-                    left: 60px;
-                    rotate: 180deg;
-                }
-
-            }
-
-            svg {
-                right: -52px;
-                top: 15px;
-
-                @include mobile {
-                    right: unset;
-                    left: -53px;
-                    top: 10px;
-                }
-            }
-        }
-
-        .right {
-            left: 50%;
-            top: 10%;
-
-            @include mobile {
-                left: unset;
-                top: unset;
-            }
-
-            &:before {
-                content: " ";
-                height: 0;
-                position: absolute;
-                top: 22px;
-                width: 0;
-                z-index: 1;
-                left: 30px;
-                border: medium solid white;
-                border-width: 10px 10px 10px 0;
-                border-color: transparent white transparent transparent;
-
-                @include mobile {
-                    rotate: 360deg;
-                    left: 61px;
-                }
-
+                margin-top: 70px;
             }
 
             &:after {
-                left: -16px;
+                content: '';
+                position: absolute;
+                width: 6px;
+                // height: 380px;
+                border-radius: 10px;
+                background-color: rgb(255, 255, 255);
+                top: 0;
+                bottom: 0;
+                left: 50%;
+                margin-left: -3px;
 
                 @include mobile {
-                    left: 15px;
+                    width: 4px;
+                    // top: 25%;
+                    bottom: -30%;
+                    left: 31px;
+                    height: 100vh;
                 }
             }
 
-            svg {
-                left: -53px;
-                top: 15px;
+            .container {
+                padding: 10px 40px;
+                position: relative;
+                background-color: inherit;
+                width: 50%;
+
+                @include mobile {
+                    width: 100%;
+                    padding-left: 70px;
+                    padding-right: 25px;
+                }
+
+                .content {
+                    padding: 20px 30px;
+                    background-color: rgba(68, 63, 144, 0.441);
+                    position: relative;
+                    border-radius: 6px;
+
+                    h2 {
+                        color: #f9710a;
+                    }
+
+                    h5 {
+                        margin-block: 10px;
+                        font-weight: lighter;
+                    }
+                }
+
+                svg {
+                    content: '';
+                    position: absolute;
+                    width: 25px;
+                    height: 25px;
+                    background-color: rgb(41, 38, 82);
+                    border: 4px solid #f9710a;
+                    border-radius: 50%;
+                    z-index: 1;
+                    transform: rotate(-90deg);
+
+                    circle {
+                        stroke-dashoffset: 0;
+                        stroke-width: 15%;
+                        fill: none;
+                    }
+                }
             }
 
+            .left {
+                left: 0;
+                margin-top: 120px;
+
+                &:before {
+                    content: " ";
+                    height: 0;
+                    position: absolute;
+                    top: 22px;
+                    width: 0;
+                    z-index: 1;
+                    right: 30px;
+                    border: medium solid rgb(255, 255, 255);
+                    border-width: 10px 0 10px 10px;
+                    border-color: transparent transparent transparent rgb(255, 255, 255);
+
+                    @include mobile {
+                        left: 60px;
+                        rotate: 180deg;
+                    }
+
+                }
+
+                svg {
+                    right: -52px;
+                    top: 15px;
+
+                    @include mobile {
+                        right: unset;
+                        left: -53px;
+                        top: 10px;
+                    }
+                }
+            }
+
+            .right {
+                left: 50%;
+                top: 10%;
+
+                @include mobile {
+                    left: unset;
+                    top: unset;
+                }
+
+                &:before {
+                    content: " ";
+                    height: 0;
+                    position: absolute;
+                    top: 22px;
+                    width: 0;
+                    z-index: 1;
+                    left: 30px;
+                    border: medium solid whrgb(255, 255, 255)ite;
+                    border-width: 10px 10px 10px 0;
+                    border-color: transparent rgb(255, 255, 255) transparent transparent;
+
+                    @include mobile {
+                        rotate: 360deg;
+                        left: 61px;
+                    }
+
+                }
+
+                &:after {
+                    left: -16px;
+
+                    @include mobile {
+                        left: 15px;
+                    }
+                }
+
+                svg {
+                    left: -53px;
+                    top: 15px;
+                }
+
+            }
         }
     }
 }
