--- a/my-portfolio/src/pages/hero/hero.scss
+++ b/my-portfolio/src/pages/hero/hero.scss
@@ -73,10 +73,10 @@
             .buttons {
                 button {
                     padding: 20px;
-                    border: 1px solid white;
+                    border: 1px solid rgb(255, 255, 255);
                     border-radius: 10px;
                     background-color: transparent;
-                    color: white;
+                    color: rgb(255, 255, 255);
                     margin-right: 20px;
                     cursor: pointer;
                     font-weight: 300;
