--- a/my-portfolio/src/pages/education/education.scss
+++ b/my-portfolio/src/pages/education/education.scss
@@ -5,6 +5,12 @@
     justify-content: center;
     align-items: center;
 
+    .imageContainer {
+        width: 100%;
+        height: 100%;
+    }
+
+
     .timelineContainer {
         display: flex;
         justify-content: center;
