--- a/my-portfolio/src/pages/education/education.scss
+++ b/my-portfolio/src/pages/education/education.scss
@@ -4,29 +4,74 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
-    .imageContainer {
-        width: 100%;
-        height: 100%;
+    @include mobile {
+        flex-direction: column;
+        gap: 0;
     }
 
+    @include tablet {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .imageContainer {
+        flex: 1;
+        width: 100%;
+        height: 100%;
+
+        @include tablet {
+            width: 600px;
+        }
+
+    }
+
+    .textContainer {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+
+        .item {
+            padding: 10px;
+            border-radius: 5px;
+            background-color: rgba(68, 63, 144, 0.441);
+
+            h2 {
+                color: #f9710a;
+            }
+
+            h5 {
+                margin-block: 10px;
+                font-weight: lighter;
+            }
+        }
+    }
 
     .timelineContainer {
+        flex: 1;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        // height: 100vh;
         width: 100%;
         overflow: hidden;
+
+        // @include mobile{
+        // align-self: flex-start;
+        // justify-self: flex-start;
+        // }
 
         .timeline {
             position: relative;
             max-width: $desktop-width;
             width: 100%;
-            margin: 0 auto;
+            // margin: 0 auto;
 
             @include mobile {
-                margin-top: 70px;
+                margin-top: 0px;
             }
 
             &:after {
@@ -38,7 +83,8 @@
                 background-color: rgb(255, 255, 255);
                 top: 0;
                 bottom: 0;
-                left: 50%;
+                // left: 50%;
+                left: 15px;
                 margin-left: -3px;
 
                 @include mobile {
@@ -54,7 +100,7 @@
                 padding: 10px 40px;
                 position: relative;
                 background-color: inherit;
-                width: 50%;
+                width: 100%;
 
                 @include mobile {
                     width: 100%;
@@ -97,48 +143,55 @@
                 }
             }
 
-            .left {
-                left: 0;
-                margin-top: 120px;
+            // .left {
+            //     left: 0;
+            //     margin-top: 120px;
 
-                &:before {
-                    content: " ";
-                    height: 0;
-                    position: absolute;
-                    top: 22px;
-                    width: 0;
-                    z-index: 1;
-                    right: 30px;
-                    border: medium solid rgb(255, 255, 255);
-                    border-width: 10px 0 10px 10px;
-                    border-color: transparent transparent transparent rgb(255, 255, 255);
+            //     &:before {
+            //         content: " ";
+            //         height: 0;
+            //         position: absolute;
+            //         top: 22px;
+            //         width: 0;
+            //         z-index: 1;
+            //         right: 30px;
+            //         border: medium solid rgb(255, 255, 255);
+            //         border-width: 10px 0 10px 10px;
+            //         border-color: transparent transparent transparent rgb(255, 255, 255);
 
-                    @include mobile {
-                        left: 60px;
-                        rotate: 180deg;
-                    }
+            //         @include mobile {
+            //             left: 60px;
+            //             rotate: 180deg;
+            //         }
 
-                }
+            //     }
 
-                svg {
-                    right: -52px;
-                    top: 15px;
+            //     svg {
+            //         right: -52px;
+            //         top: 15px;
 
-                    @include mobile {
-                        right: unset;
-                        left: -53px;
-                        top: 10px;
-                    }
-                }
-            }
+            //         @include mobile {
+            //             right: unset;
+            //             left: -53px;
+            //             top: 10px;
+            //         }
+            //     }
+            // }
 
             .right {
-                left: 50%;
-                top: 10%;
+                // left: 50%;
+                left: 15px;
+                top: 30vh;
+                // margin-top: 50px;
 
                 @include mobile {
                     left: unset;
                     top: unset;
+                    top: 0;
+                }
+
+                @include tablet {
+                    top: 25vh;
                 }
 
                 &:before {
@@ -176,4 +229,7 @@
             }
         }
     }
+
+    ///////
+
 }
