--- a/my-portfolio/src/app.scss
+++ b/my-portfolio/src/app.scss
@@ -38,13 +38,13 @@ section{
 }
 
 @mixin tablet {
-    @media(min-width:739px) and (max-width: 1023px){
+    @media(min-width:739px) and (max-width: 1024px){
         @content;
     }
 }
 
 @mixin desktop {
-    @media(min-width: 1024px){
+    @media(max-width: 1366px){
         @content;
     }
 }
