--- a/my-portfolio/src/pages/hero/hero.scss
+++ b/my-portfolio/src/pages/hero/hero.scss
@@ -11,6 +11,7 @@
 
 ;
 
+
 @mixin mobile-tablet-imageContainer {
     height: 50%;
     width: 100%;
@@ -38,10 +39,11 @@
 
         .textContainer {
             width: 50%;
-            height: 100%;
+            // height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            margin-top: 50px;
             gap: 40px;
 
             @include mobile {
@@ -71,15 +73,16 @@
             }
 
             .buttons {
-                button {
+
+                a {
                     padding: 20px;
                     border: 1px solid rgb(255, 255, 255);
                     border-radius: 10px;
                     background-color: transparent;
                     color: rgb(255, 255, 255);
                     margin-right: 20px;
-                    cursor: pointer;
                     font-weight: 300;
+                    cursor: pointer;
 
                     @include mobile {
                         padding: 10px;
